lavender launcher for java 16