@@ -212,24 +212,9 @@
         <configuration>
           <name>lavender</name>
           <main>net.oneandone.lavender.cli.Main</main>
-          <extensions>
-            <extension>if [ -z $JAVA_MODULES ] ; then</extension>
-            <!-- auto-detect; see https://www.oracle.com/technetwork/java/javase/versioning-naming-139433.html -->
-            <!-- takes less than 1/10 of a second: -->
-            <extension>  export JAVA_VERSION=$(java -version 2&gt;&amp;1 | head -n 1 | cut -f 3 -d ' ' | cut -f 2 -d '"')</extension>
-            <extension>  # echo java ${JAVA_VERSION}</extension>
-            <extension>  case "$JAVA_VERSION" in</extension>
-            <extension>    "1."*) export JAVA_MODULES=false ;;</extension>
-            <extension>    *) export JAVA_MODULES=true ;;</extension>
-            <extension>  esac</extension>
-            <extension>fi</extension>
-            <extension>if [ "$JAVA_MODULES" != "false" ] ; then</extension>
-            <extension>  OPTIONS="--illegal-access=deny --add-exports=java.base/sun.security.ssl=ALL-UNNAMED $OPTIONS"</extension><!-- TODO: svnkit needs access to sun.security.ssl -->
-            <extension>fi</extension>
-          </extensions>
           <options>-Djava.awt.headless=true</options>
           <remove>META-INF/AL2.0, META-INF/LGPL2.1, META-INF/DEPENDENCIES, META-INF/NOTICE, META-INF/LICENSE.txt, META-INF/NOTICE.txt, META-INF/LICENSE, META-INF/wsd.properties, META-INF/pominfo.properties</remove>
-          <equal>com/jcraft/jsch/agentproxy/**/*</equal>
+          <equal>com/jcraft/jsch/agentproxy/*.class</equal>
         </configuration>
         <executions>
           <execution>
